ansible.cfgのroles_path指定に関する注釈コメントを追記

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,6 +3,8 @@ inventory = hosts
 remote_user = ubuntu
 host_key_checking = False
 private_key_file = .vagrant/machines/{{ inventory_hostname }}/virtualbox/private_key
+# roles_pathは書籍本文のサンプルコードに記載がありませんが、playbookの配置パスの都合上指定が必要なため追記しています。
+# 公式サイト( http://gihyo.jp/book/2017/978-4-7741-8885-0 )の正誤表をご確認ください
 roles_path = ./roles
 
 [privilege_escalation]
